--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ languageCode = "en"
 languageName = "English"
 
 # google analytics code [UA-XXXXXXXX-X]
-googleAnalytics = "UA-146892472-1"
+googleAnalytics = "G-ZQB3XPKYKM"
 
 # copyright description used only for seo schema
 copyright = ""
