--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -32,7 +32,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.111.3
+      HUGO_VERSION: 0.136.4
     steps:
       - name: Install Hugo CLI
         run: |
@@ -45,6 +45,8 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Update theme
+        run: git submodule update --init --recursive
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
