upgraded and added new post

--- a/config.toml
+++ b/config.toml
@@ -49,9 +49,10 @@ copyright = ""
     title = ""
 
 [params]
-  author = "Alex Spanos"
-  link = ""
-  email = ""
+  [params.author]
+    name = "Alex Spanos"
+    link = ""
+    email = ""
   # site default theme ["auto", "light", "dark"]
   defaultTheme = "light"
   # public git repo url only then enableGitInfo is true
