--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ copyright = ""
   # website title for Open Graph and Twitter Cards
   title = ""
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  description = "My Data blog"
+  description = "Alex Spanos Data & AI blog"
   # website images for Open Graph and Twitter Cards
   # images = ["/logo.png"]
 
