--- a/config.toml
+++ b/config.toml
@@ -30,23 +30,31 @@ copyright = ""
     title = ""
   [[menu.main]]
     weight = 2
-    identifier = "posts"
+    identifier = "insights"
     # you can add extra information before the name (HTML format is supported), such as icons
     pre = ""
     # you can add extra information after the name (HTML format is supported), such as icons
     post = ""
-    name = "Posts"
-    url = "/posts/"
+    name = "Insights"
+    url = "/insights/"
     # title will be shown when you hover on this menu link
     title = ""
   [[menu.main]]
-    weight = 3
-    identifier = "categories"
+    weight = 2.5
+    identifier = "portfolio"
     pre = ""
     post = ""
-    name = "Categories"
-    url = "/categories/"
-    title = ""
+    name = "Portfolio"
+    url = "/portfolio/"
+    title = "View my portfolio"
+  [[menu.main]]
+    weight = 3
+    identifier = "contact"
+    pre = ""
+    post = ""
+    name = "Contact"
+    url = "/contact/"
+    title = "Contact"
 
 [params]
   [params.author]
