Add profile layout and update Markdown configuration
- Introduced a new profile layout in `layouts/partials/home/profile.html` to enhance the home page presentation.
- Updated `config.toml` to enable unsafe HTML rendering in Goldmark for improved Markdown processing.

--- a/config.toml
+++ b/config.toml
@@ -173,6 +173,11 @@ copyright = ""
   [markup.highlight]
     # false is a necessary configuration (https://github.com/dillonzq/LoveIt/issues/158)
     noClasses = false
+  # Goldmark is from Hugo 0.60 the default library used for Markdown
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      # whether to use HTML tags directly in the document
+      unsafe = true
 
   # LoveIt NEW | 0.2.0 Analytics config
   [params.analytics]
