Update personal site content to clarify views and enhance descriptions
- Revised the disclaimer in the config file to specify that the site reflects personal views and does not offer consulting services.
- Updated the description in the index file to focus on personal writing about data leadership and applied AI/ML.
- Changed section titles and content in the about and contact pages to emphasize personal opinions and non-commercial nature of the site, while inviting feedback and connections.

--- a/config.toml
+++ b/config.toml
@@ -150,7 +150,7 @@ copyright = ""
       # whether to show social links
       social = true
       # LoveIt NEW | 0.2.0 disclaimer (HTML format is supported)
-      # disclaimer = ""
+      disclaimer = "Personal site; views are my own and not affiliated with my employer. No consulting/contracting services offered. Please do not share confidential information."
     # Home page posts
     [params.home.posts]
       enable = true
